@@ -37,6 +37,8 @@ Core and Builtins
 Library
 -------
 
+- Issue #16169: Fix ctypes.WinError()'s confusion between errno and winerror.
+
 - Issue #16089: Allow ElementTree.TreeBuilder to work again with a non-Element
   element_factory (fixes a regression in SimpleTAL).
 
